// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: undefined !important;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: none;
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.6;
  -webkit-filter: saturate(60%);
  filter: saturate(60%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c0:active {
  box-shadow: none;
}

.c1 {
  width: auto;
  height: auto;
}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<button
  aria-describedby="id-of-a-paragraph-explaining-why"
  className="c0 c1 dynamic-button"
  type="button"
>
  Default
</button>
`;

exports[`Storyshots Button Disabled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: undefined !important;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: none;
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.6;
  -webkit-filter: saturate(60%);
  filter: saturate(60%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c0:active {
  box-shadow: none;
}

.c1 {
  width: auto;
  height: auto;
}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<button
  aria-describedby="id-of-a-paragraph-explaining-why"
  aria-label="a button"
  className="c0 c1 dynamic-button"
  disabled={true}
  title="AppButton"
  type="button"
>
  Disabled
</button>
`;

exports[`Storyshots Button Submit 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: undefined !important;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: none;
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.6;
  -webkit-filter: saturate(60%);
  filter: saturate(60%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c0:active {
  box-shadow: none;
}

.c1 {
  width: auto;
  height: auto;
}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<button
  aria-describedby="id-of-a-paragraph-explaining-why"
  aria-label="form submit button"
  className="c0 c1 dynamic-button"
  id="submit-form-01"
  name="subject"
  title="AppButton"
  type="submit"
  value="form"
>
  Submit
</button>
`;

exports[`Storyshots ButtonHamburger Default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: undefined !important;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: none;
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.6;
  -webkit-filter: saturate(60%);
  filter: saturate(60%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c0:active {
  box-shadow: none;
}

.c1 {
  width: 36px;
  height: 26px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-shadow: none;
  background-color: transparent;
  outline: var(--neutral_06) 2px solid;
}

.c1 div {
  width: 100%;
  height: 4px;
  background-color: var(--secondary_01);
  -webkit-transition: all 0.5s linear;
  transition: all 0.5s linear;
}

.c1 div:first-child {
  -webkit-transform: translateY(11px) rotate(45deg);
  -ms-transform: translateY(11px) rotate(45deg);
  transform: translateY(11px) rotate(45deg);
}

.c1 div:nth-child(2) {
  opacity: 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c1 div:nth-child(3) {
  -webkit-transform: translateY(-11px) rotate(-45deg);
  -ms-transform: translateY(-11px) rotate(-45deg);
  transform: translateY(-11px) rotate(-45deg);
}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<button
  aria-describedby="id-of-a-paragraph-explaining-why"
  aria-label="open side drawer menu button"
  className="c0 c1 hamburger-button"
  role="button"
  title="hamburgerButton"
  type="button"
>
  <div />
  <div />
  <div />
</button>
`;

exports[`Storyshots Display1 Default 1`] = `
.c0 {
  margin: 0;
  text-align: center;
  font-variation-settings: 'wght' 700;
  font-weight: 700;
  font-size: var(--typ-d-1-fs);
  line-height: var(--typ-d-1-lh);
  -webkit-letter-spacing: var(--typ-d-1-ls);
  -moz-letter-spacing: var(--typ-d-1-ls);
  -ms-letter-spacing: var(--typ-d-1-ls);
  letter-spacing: var(--typ-d-1-ls);
}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<h1
  className="c0"
>
  Basic Display1
</h1>
`;

exports[`Storyshots Display1 Styled 1`] = `
.c0 {
  margin: 0;
  text-align: center;
  color: navy;
  font-variation-settings: 'wght' 700;
  font-weight: 700;
  font-size: var(--typ-d-1-fs);
  line-height: var(--typ-d-1-lh);
  -webkit-letter-spacing: var(--typ-d-1-ls);
  -moz-letter-spacing: var(--typ-d-1-ls);
  -ms-letter-spacing: var(--typ-d-1-ls);
  letter-spacing: var(--typ-d-1-ls);
}

.c1 {
  font-style: italic;
  font-synthesis: none;
}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<h1
  className="c0"
>
  <span
    className="c1"
  >
    Styled Display1
  </span>
</h1>
`;

exports[`Storyshots Input Default 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: undefined !important;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: none;
  box-shadow: none;
}

.c6:disabled {
  opacity: 0.6;
  -webkit-filter: saturate(60%);
  filter: saturate(60%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c6:active {
  box-shadow: none;
}

.c1 {
  margin: 0;
  text-align: center;
  font-variation-settings: 'wght' 300;
  font-weight: 400;
}

.c2 {
  font-size: var(--typ-lbl-lg-fs);
  line-height: var(--typ-lbl-lg-lh);
}

.c5 {
  min-width: 60px;
  min-height: 28px;
  padding: 0 5px;
  border: none;
  -webkit-flex: 1 0;
  -ms-flex: 1 0;
  flex: 1 0;
  font-style: inherit;
  font-variation-settings: 'wght' 500;
  font-weight: 500;
  line-height: 0;
  color: var(--neutral_08);
  background-color: transparent;
  outline: none;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  border: none;
  border-radius: 4px;
  outline: 2px solid var(--accent_04);
  background-color: var(--secondary_01);
}

.c4:focus-within {
  outline: 3px solid var(--accent_04);
}

.c4 svg {
  width: 24px;
  height: 24px;
  fill: var(--neutral_09);
  fill-opacity: 0.2;
}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

@media screen and (min-width:0) {
  .c1 {
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
  }
}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

@media screen and (min-width:0) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

@media screen and (min-width:0) {
  .c3 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    padding: 5px;
  }
}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<div
  className="c0"
>
  <label
    className="c1 c2"
    htmlFor="email"
  >
    your email
  </label>
  <div
    className="c3 c4 input-wrapper"
  >
    <svg>
      icon-email_24dp.svg
    </svg>
    <input
      className="c5 input-text"
      id="email"
      onBlur={[Function]}
      onChange={[Function]}
      value="fake@email.com"
    />
    <button
      aria-describedby="id-of-a-paragraph-explaining-why"
      aria-label="reset form field"
      className="c6"
      title="reset"
      type="button"
    >
      <svg>
        icon-close_24dp.svg
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots ParagraphLarge Default 1`] = `
.c0 {
  margin: 0;
  text-align: center;
  font-variation-settings: 'wght' 300;
  font-weight: 400;
}

.c1 {
  font-size: var(--typ-p-lg-fs);
  line-height: var(--typ-p-lg-lh);
}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<p
  className="c0 c1"
>
  Basic ParagraphLarge
</p>
`;

exports[`Storyshots ParagraphLarge Styled 1`] = `
.c0 {
  margin: 0;
  text-align: center;
  color: navy;
  text-shadow: 0 4px 4px var(--neutral_05_op025);
  font-variation-settings: 'wght' 300;
  font-weight: 400;
}

.c1 {
  font-size: var(--typ-p-lg-fs);
  line-height: var(--typ-p-lg-lh);
}

.c2 {
  font-style: italic;
  font-synthesis: none;
}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<p
  className="c0 c1"
>
  <span
    className="c2"
  >
    Styled ParagraphLarge
  </span>
</p>
`;
